alignment fixed

--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ h1 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
-    font-size: 1.5em;
+    font-size: 2.0em;
     line-height: 1.4em;
     color: #333;
 }
@@ -45,7 +45,7 @@ footer {
 
 ul.posts {
     margin: 20px auto 40px;
-    font-size: 1.5em;
+    font-size: 2.0em;
 }
 
 ul.posts li {
